--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,22 +1,24 @@
 <resources>
     <string name="app_name">News Feed app</string>
 
-    <string name="empty_text">There is no Articles,please check your internet connection</string>
+    <string name="empty_text">Seems no internet connection\nplease check your internet connection</string>
 
     <string name="settings_activity_label">Settings</string>
+
+    <string name="no_news_found">No News Found</string>
     
     <string name="tag_list_label">Order By Tag</string>
     <string name="tag_list_key" translatable="false">order_by_tag</string>
-    <string name="tag_list_default_value" translatable="false">@string/tag_list_ordered_by_tag_sport_default_value</string>
-    
-    <string name="tag_list_ordered_by_tag_world_label">World</string>
-    <string name="tag_list_ordered_by_tag_world_default_value" translatable="false">world/world</string>
+    <string name="tag_list_default_value" translatable="false">@string/tag_list_ordered_by_section_sport_default_value</string>
 
-    <string name="tag_list_ordered_by_tag_politics_label">Politics</string>
-    <string name="tag_list_ordered_by_tag_politics_default_value" translatable="false">politics/politics</string>
+    <string name="tag_list_ordered_by_section_world_label">World</string>
+    <string name="tag_list_ordered_by_tag_section_default_value" translatable="false">world</string>
 
-    <string name="tag_list_ordered_by_tag_sport_label">Sport</string>
-    <string name="tag_list_ordered_by_tag_sport_default_value" translatable="false">sport/sport</string>
+    <string name="tag_list_ordered_by_section_politics_label">Politics</string>
+    <string name="tag_list_ordered_by_section_politics_default_value" translatable="false">politics</string>
+
+    <string name="tag_list_ordered_by_section_sport_label">Sport</string>
+    <string name="tag_list_ordered_by_section_sport_default_value" translatable="false">sport</string>
 
 
 
