--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,18 +5,20 @@
 
     <string name="settings_activity_label">Settings</string>
 
-    <string name="no_news_found">No News Found</string>
+    <string name="no_news_found">Currently there are no stories for you.\nYou can always come later\nand check for all new stories.</string>
     
     <string name="tag_list_label">Order By Tag</string>
     <string name="tag_list_key" translatable="false">order_by_tag</string>
     <string name="tag_list_default_value" translatable="false">@string/tag_list_ordered_by_section_sport_default_value</string>
 
     <string name="tag_list_ordered_by_section_world_label">World</string>
-    <string name="tag_list_ordered_by_tag_section_default_value" translatable="false">world</string>
+    <string name="tag_list_ordered_by_section_world_default_value" translatable="false">world</string>
 
     <string name="tag_list_ordered_by_section_sport_label">Sport</string>
     <string name="tag_list_ordered_by_section_sport_default_value" translatable="false">sport</string>
 
+    <string name="tag_list_ordered_by_section_football_label">Football</string>
+    <string name="tag_list_ordered_by_section_sport_football_value" translatable="false">football</string>
 
 
     <string name="date_list_label">Order By Date</string>
