--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,18 @@
+<!--
+   Copyright 2018 tarekmabdallah91@gmail.com
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+
+   http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+   -->
 <resources>
     <string name="app_name">News Feed app</string>
 
@@ -6,7 +21,7 @@
     <string name="settings_activity_label">Settings</string>
 
     <string name="no_news_found">Currently there are no stories for you.\nYou can always come later\nand check for all new stories.</string>
-    
+
     <string name="tag_list_label">Order By Tag</string>
     <string name="tag_list_key" translatable="false">order_by_tag</string>
     <string name="tag_list_default_value" translatable="false">@string/tag_list_ordered_by_section_sport_default_value</string>
