--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="error_label">Error:</string>
     <string name="main_label">Main</string>
     <string name="settings_label">Settings</string>
+    <string name="world_news_label" translatable="false">World news</string>
     <string name="world_id" translatable="false">world</string>
 
     <string name="sections_list_label">Main section</string>
