- add new feature to SettingsActivity (DatesFragment)to   - show last selected dates   - ability to clear dates - fix some issues in BaseFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,5 +66,6 @@
     <string name="countries_news_label">Countries news</string>
     <string name="from_date_label">From date:</string>
     <string name="to_date_label">To date:</string>
+    <string name="clear_dates">Clear dates</string>
 
 </resources>
