--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -48,4 +48,5 @@
     <string name="first_publication_label">اول نشر</string>
     <string name="from_date_label">من تاريخ</string>
     <string name="to_date_label">الي تاريخ</string>
+    <string name="clear_dates">مسح التاريخ</string>
 </resources>
