- continue paging process (use one adapter to show the articles) - fix removing item from Db - fix calling the right API (sections/countries)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,5 +72,7 @@
     <string name="not_valid_url_msg">Sorry can not open this link</string>
     <string name="favourite_list_label">Favourite articles</string>
     <string name="today_label">Today</string>
+    <string name="loading_msg">loading...</string>
+    <string name="empty_db_msg">Empty database !</string>
 
 </resources>
