--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -54,4 +54,6 @@
     <string name="not_valid_url_msg">عفوا, لايمكن فتح هذا الرابط</string>
     <string name="favourite_list_label">قائمة المفضلة</string>
     <string name="today_label">اليوم</string>
+    <string name="empty_db_msg">قاعدة البيانات فارغة!</string>
+    <string name="loading_msg">يتم التحميل...</string>
 </resources>
