--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
    limitations under the License.
    -->
 <resources>
-    <string name="app_name">News app</string>
+    <string name="app_name">The Guardian</string>
     <string name="search_label">Search</string>
     <string name="sections_label">Sections</string>
     <string name="article_details_label">Details</string>
