- apply more concepts in DI (still need more ...) - add android-apt: Using this plugin Android Studio will be configured to place the generated sources on the  build path, preventing errors in the IDE. When using the apt scope, the annotation processor will not be included in your final APK - add AndroidDevMetrics lib: is a performance metrics library which will help you find potential performance issues in your Android app. Thanks to it we are able to measure objects graph initialization in Dagger 2, Activities lifecycle methods timings and frame drops for each screen in app. https://mirekstanek.online/androiddevmetrics%e2%80%8a-%e2%80%8aactivity-lifecycle-methods-tracing/ - add AutoFactory which generates factories that can be used on their own or with JSR-330-compatible dependency injectors from a simple annotation - update ReadMe

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -18,7 +18,7 @@
   -->
 
 <resources>
-    <string name="app_name">News app</string>
+    <string name="app_name">الجارديان</string>
     <string name="search_label">بحث</string>
     <string name="sections_label">أقسام</string>
     <string name="article_details_label">التفاصيل</string>
