- add splashActivity (used for now to choose between 2 types of view) - add EasyViewActivity which contains a viewpager and set it with the tab layout and the ItemViewPagerAdapter - uses some presenter to move the code out of the VIEWs - SearchActivity and SearchFragment needs some fixes - till this step the viewpager displays the fragments smoothly BUT need to avoid reloading the fragment if it was loaded before, and to solve the issue when rotate the device as it does not load the 1st fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,8 +72,10 @@
     <string name="not_valid_url_msg">Sorry can not open this link</string>
     <string name="favourite_list_label">Favourite articles</string>
     <string name="today_label">Today</string>
-    <string name="loading_msg">loading...</string>
+    <string name="loading_msg">loading....</string>
     <string name="empty_db_msg">Empty database !</string>
     <string name="about_me">About me</string>
+    <string name="simple_view">Simple view</string>
+    <string name="easy_view">Easy view</string>
 
 </resources>
