- solved reloading fragments every time when be visible   decrease sections in viewpager   use arguments to pass values to the fragment

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -57,6 +57,6 @@
     <string name="empty_db_msg">قاعدة البيانات فارغة!</string>
     <string name="loading_msg">يتم التحميل ....</string>
     <string name="about_me">عني</string>
-    <string name="simple_view">simple view</string>
-    <string name="easy_view">Easy view</string>
+    <string name="simple_view">التصفح العادي</string>
+    <string name="easy_view">التصفح السهل</string>
 </resources>
